cabal-version:      3.0
name:               module-loader
version:            0.1
synopsis:           Load haskell module dynamically
description:        Load haskell module dynamically.
category:           Development
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ButlerOS/module-loader

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    PartialTypeSignatures
    OverloadedStrings
    OverloadedRecordDot

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    ModuleLoader
  build-depends:
    , ghci

executable module-loader-demo
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:  module-loader, directory
